# ets2-lane-detection

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  arguments.cpp  arguments.h  imgui.ini  main.cpp  vcpkg.json
.github/workflows/: build.yaml  release.yaml  workflow.yaml
capture/: CMakeLists.txt
capture/interface/: camera.ixx  capture.ixx  device.ixx  duplicator.ixx  frame_buffer.ixx  output.ixx  surface.ixx  timer.ixx  utils.ixx
capture/src/: camera.cppm  camera.ixx  capture.cppm  capture.ixx  device.cppm  device.ixx  duplicator.cppm  duplicator.ixx  frame_buffer.cppm  output.cppm  output.ixx  surface.cppm  surface.ixx  timer.cppm  timer.ixx  utils.cppm  utils.ixx
d3d11_capture/: CMakeLists.txt
d3d11_capture/include/d3d11_capture/: camera.h  capture.h  common.h  device.h  duplicator.h  event.h  factory.h  frame_buffer.h  output.h  region.h  stage_surface.h  surface.h
d3d11_capture/src/: camera.cpp  capture.cpp  common.cpp  device.cpp  duplicator.cpp  event.cpp  factory.cpp  frame_buffer.cpp  output.cpp  region.cpp  stage_surface.cpp  surface.cpp
docs/: BUILD.md  USAGE.md  onnxruntimeVersion.cmake
dx11/: CMakeLists.txt
dx11/include/dx11/: camera.h  capture.h  common.h  device.h  duplicator.h  event.h  frame_buffer.h  output.h  region.h  surface.h  timer.h
dx11/src/: camera.cpp  capture.cpp  common.cpp  device.cpp  duplicator.cpp  event.cpp  frame_buffer.cpp  output.cpp  region.cpp  surface.cpp  timer.cpp
ets2ld/: CMakeLists.txt
ets2ld/include/ets2ld/: application.h  event.h  lane_detection_result_buffer.h  settings.h  ui.h  utils.h
ets2ld/interface/: application.ixx  ets2ld.ixx  settings.ixx  ui.ixx  utils.ixx
ets2ld/src/: application.cpp  application.cppm  application.ixx  arguments.cpp  ets2ld.ixx  event.cpp  lane_detection_result_buffer.cpp  settings.cpp  ui.cpp  ui.cppm  ui.ixx  utils.cpp  utils.cppm  utils.ixx
models/: README.md
ufld/: CMakeLists.txt
ufld/cmake/: onnxruntimeConfig.cmake  onnxruntimeVersion.cmake
ufld/include/ufld/: ufld.h  utils.h  v1.h
ufld/interface/: base.ixx  ld.ixx  math.ixx  ufld.ixx  utils.ixx  v1.ixx  v1_config.ixx
ufld/src/: base.cppm  core.ixx  draw.ixx  math.cppm  math.ixx  ufld.cpp  ufld.cppm  ufld.ixx  utils.cpp  utils.cppm  v1.cpp  v1.cppm  v1.ixx  v1_config.cppm  v1_config.ixx  v2.ixx  v2_config.ixx
ufld/test/: CMakeLists.txt  math_test.cpp  math_test.cppm  math_test.ixx  test_main.cpp  utils_test.cpp
